--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,9 @@ google_site_verification: todo
 markdown: redcarpet
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data", "smart"]
+
+collections:
+  seminars:
+    output: false
+  books:
+    output: false
