--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: ruby
 cache: bundler
+sudo: false
 rvm:
-  - 2.0.0
+  - 2.3.0
 script: bundle exec jekyll build
 after_success: bundle exec s3_website push
